# 2025_term_llm

./: README.md  app.py  chains.py  dependencies.py  financial.py  graph_workflow.py  index.html  main.py  news_crawler.py  pyproject.toml  rag.py  requirements.txt  utils.py  vector_db.py
GDspace/00-LayoutPdfParser/: 01-Layout-Parser.ipynb  05-Document-Graph-Parser-RAG-Example.ipynb  README.md  langgraph.json  parser.py  pyproject.toml
GDspace/00-LayoutPdfParser/data/: styles.css  디지털정부혁신 추진계획.md  디지털정부혁신 추진계획.pkl  디지털정부혁신 추진계획_0000_0009.json  디지털정부혁신 추진계획_0010_0018.json
GDspace/00-LayoutPdfParser/graphparser/: core.py  layout_utils.py  parser_chains.py
GDspace/news_summarizer/: get_ActiveStock_NewsSummary.py
GDspace/pdf_parser/: pdf_parser.py  pdf_parser_v2.py  pdf_parser_v3.py
GDspace/utils/: Gemma_tool.py  NLP_tool.py
prototype/: Agent_StudySupporter.ipynb  Agent_test.ipynb  app.py
prototype/v2/: index.html
static/: index.html
v2/: chains.py  dependencies.py  financial.py  graph_workflow.py  main.py  news_crawler.py  rag.py  utils.py  vector_db.py
v3/: chains.py  financial.py  graph_workflow.py  local_test.py  main.py  news_crawler.py  rag.py  vector_db.py
v3/static/: index.html
